<resources>
    <string name="app_name">AIFeel</string>
    <string name="notify_password">Password kurang dari 8 karakter</string>
    <string name="mic_logo">Logo Mic</string>
    <string name="welcome_text">Welcome</string>
    <string name="sign_in_text">Sign In</string>
    <string name="email_label">Email Address</string>
    <string name="email_hint">Enter your email...</string>
    <string name="password_label">Password</string>
    <string name="password_hint">Enter your password...</string>
    <string name="login_button">Sign In -></string>
    <string name="footer_text">Dont have an account? Sign Up</string>
    <string name="error_empty_fields">All fields must not be empty</string>
    <string name="error_invalid_credentials">Invalid email or password</string>
    <string name="loading">Loading...</string>


    <string name="edit_email_button">Edit Email</string>
    <string name="edit_name_button">Edit Email</string>

</resources>