<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cream"
    tools:context=".ui.authentification.LoginActivity">

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/welcome_text"
        android:textColor="@color/blue"
        android:textSize="35sp"
        android:textStyle="bold"
        android:fontFamily="@font/poppinsbold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.498" />

    <TextView
        android:id="@+id/signInText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/sign_in_text"
        android:textSize="30sp"
        android:textStyle="bold"
        android:fontFamily="@font/poppinsbold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeText"
        app:layout_constraintHorizontal_bias="0.498" />

    <TextView
        android:id="@+id/emailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48sp"
        android:text="@string/email_label"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="@font/poppinsbold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signInText"
        app:layout_constraintHorizontal_bias="0.084" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/EmailLayout"
        android:layout_width="0dp"
        android:layout_height="56sp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailLabel">

        <ImageView
            android:id="@+id/emailIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:src="@drawable/email"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="48sp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:hint="@string/email_hint"
            android:fontFamily="@font/poppinsbold"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/emailIcon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.072" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/password_label"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="@font/poppinsbold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/EmailLayout"
        app:layout_constraintHorizontal_bias="0.093" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/PasswordLayout"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordLabel">

        <ImageView
            android:id="@+id/passwordIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:src="@drawable/password"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.example.aifeel.ui.customtext.CustomEditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:hint="@string/password_hint"
            android:fontFamily="@font/poppinsbold"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/passwordIcon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.068" />

        <ImageView
            android:id="@+id/visiblePass"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:src="@drawable/visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/password"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.5" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:text="@string/login_button"
        android:fontFamily="@font/poppinsbold"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/PasswordLayout"
        app:layout_constraintHorizontal_bias="0.5" />

    <TextView
        android:id="@+id/footerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/footer_text"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:fontFamily="@font/poppinsbold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginButton"
        app:layout_constraintHorizontal_bias="0.497" />

    <RelativeLayout
        android:id="@+id/loadingLayer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="#80000000"
        android:gravity="center">

    <android.widget.ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone" />
</RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
